# Wired-Al

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  way_of_working.md
assets/: agentic-flowchart-first.md  agentic-flowchart-last.md  system-flowchart.md  system-flowchart.mmd
dockerfiles/: backend.dockerfile  frontend.dockerfile  postgres.dockerfile
src/backend/: pyproject.toml
src/backend/agent/: model.py
src/frontend/: pyproject.toml
src/rag/: retrieval.py
src/wired_al/backend/: pyproject.toml
src/wired_al/backend/backend/: api.py  constants.py  model.py
src/wired_al/rag/: pyproject.toml
src/wired_al/rag/rag/: data_models.py  ingestion.py
