[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Wired Al"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
    "pydantic-ai>=1.86.0",
    "lancedb==0.17",
    "mlflow>=3.11.1",
    "pandas<3",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
